# N8N_Compose

./: .gitignore  Multi-Agent AI Clinic Management with WhatsApp, Telegram, and Google Calendar.json  RAG Testing - FULL PRO TOON Dynamic Chunking.json  README.md  clickhouse-listen.xml  docker-compose.yml  ecosistems_up.sh  env.example.txt  init-db.sh  masking_data.py  otel-collector-config.yaml  traefik-dynamic.yml
webchat_gateway/: Dockerfile  README.md  pyproject.toml
webchat_gateway/app/: main copy.py  main.py
webchat_gateway/app/fibralan/: index-light.html  index.html  script.js  style-light.css  style.css
webchat_gateway/app/static/: agent-chat-widget.css  agent-chat-widget.js  index.html
