[project]
name = "webchat-gateway"
version = "0.1.0"
description = "FastAPI WebSocket gateway for n8n webchat"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "httpx==0.28.1",
    "redis==5.2.1",
    "pydantic==2.10.4"
]

[tool.uv]
package = false